General | DietPi now uses its own "dietpi-postboot.service" to initiate dietpi-services, instead of /etc/rc.local. The latter will be reset on update, but in case of manual adjustments, a backup is safed to dietpi_userdata. The initiating "rc-local.service" will stay in place as well, so /etc/rc.local can be used as before: https://github.com/Fourdee/DietPi/issues/1376

Bug Fixes:
DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.

-----------------------------------------------------------------------------------------------------------

v6.2
(18/02/18)

Changes / Improvements / Optimizations:
Native PC UEFI | Image now includes options to install to either EMMC (eg: onboard) or SDA (1st HDD) device: https://github.com/Fourdee/DietPi/issues/1171#issuecomment-336522021 | http://dietpi.com/phpbb/viewtopic.php?f=9&t=2809&p=10808#p10808
DietPi-Backup | Rsync: Error control now handled by G_RUN_CMD
DietPi-Config | Locale: Reworked, now only lists UTF-8 items, no longer using dpkg-reconfigure. Our custom set_software script handles all locales ensuring en_GB is always installed, and selected item is applied as system default.
DietPi-Config | Display options > Resolution: Added fkms/kms (OpenGL) modes for RPi 2/3.
DietPi-Config | Sparky SBC: Added option to select usb-dac-1.1 soundcard, which will enable USB1.1 compatibility.
DietPi-Config | WiFi: Now supports connecting to hidden WiFi networks, thanks @shahwahed : https://github.com/Fourdee/DietPi/pull/1497
DietPi-LetsEncrypt | On Jessie, changed certificate auto renewal to native certbot renew command, to prevent certificate duplication: https://github.com/Fourdee/DietPi/issues/734
DietPi-LetsEncrypt | On Stretch, added automated Minio certificate renewal. Rerun "dietpi-letsencrypt" on your Stretch system to gain this feature.
DietPi-Process_tool | Reduction of onscreen print. Additional status print will only occur when HIERARCHY is less than 2 and/or an error occurs.