@@ -260,6 +260,15 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		G_DIETPI-NOTIFY 2 "Reducing getty count and resource usage:"
+
+		for ((i=2; i<=6; i++))
+		do
+
+			systemctl mask getty@tty$i
+
+		done
+		#-------------------------------------------------------------------------------
 
 	fi
 
