@@ -4,6 +4,7 @@ v6.3
 
 Changes / Improvements / Optimizations:
 General | DietPi now uses its own "dietpi-postboot.service" to initiate dietpi-services, instead of /etc/rc.local. The latter will be reset on update, but in case of manual adjustments, a backup is safed to dietpi_userdata. The initiating "rc-local.service" will stay in place as well, so /etc/rc.local can be used as before: https://github.com/Fourdee/DietPi/issues/1376
+General | Additional getty's (2-6) are now disabled via mask. This reduces resource usage for unneeded screens: https://github.com/Fourdee/DietPi/issues/1541
 
 Bug Fixes:
 DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.
